Api con consultas y respuesta

--- a/Proyecto2/src/Pages/index.html
+++ b/Proyecto2/src/Pages/index.html
@@ -47,7 +47,12 @@
             <input type="text" id="text-user"><br>
             <label id="label-password">Password</label><br>
             <input type="text" id="text-password"><br>
-            <button id="boton-login"></button><br>
+            <div class="button-container-1">
+                <span class="mas">Login</span>
+                 <button id='work' type="button" name="Hover" >
+                    <a href="./login">Login</a>
+                </button>
+            </div>
         </div>
 </body>
 </html>
